{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 237,
  "lineage": "76e72e8d-29ae-9791-ad35-fdf37a83b914",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.101.250.0/24",
            "address_prefixes": [
              "10.101.250.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Platform-Networking",
            "virtual_network_name": "AZ01-Platform-01"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "sn-dirservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.101.10.0/23",
            "address_prefixes": [
              "10.101.10.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/SN-DirServices",
            "name": "SN-DirServices",
            "network_security_group_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Platform-DirServices",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Platform-Networking",
            "virtual_network_name": "AZ01-Platform-01"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "fwp-cmlfwtest-01-uks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/firewallPolicies/FWP-CMLFWTest-01-UKS",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "uksouth",
            "name": "FWP-CMLFWTest-01-UKS",
            "private_ip_ranges": [],
            "resource_group_name": "RG-Platform-Networking",
            "rule_collection_groups": [
              "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/firewallPolicies/FWP-CMLFWTest-01-UKS/ruleCollectionGroups/FWP-RCG-CMLFWTest-01-UKS-NetworkRules",
              "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/firewallPolicies/FWP-CMLFWTest-01-UKS/ruleCollectionGroups/FWP-RCG-CMLFWTest-01-UKS-ApplicationRules"
            ],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": {
              "environment": "Platform",
              "role": "Firewall Policy "
            },
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "fwp-rcg-cmlfwtest-applicationsrules-01-uks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/firewallPolicies/FWP-CMLFWTest-01-UKS",
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/firewallPolicies/FWP-CMLFWTest-01-UKS/ruleCollectionGroups/FWP-RCG-CMLFWTest-01-UKS-ApplicationRules",
            "name": "FWP-RCG-CMLFWTest-01-UKS-ApplicationRules",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 200,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall_policy.fwp-cmlfwtest-01-uks",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "fwp-rcg-cmlfwtest-netrules-01-uks",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [],
            "firewall_policy_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/firewallPolicies/FWP-CMLFWTest-01-UKS",
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/firewallPolicies/FWP-CMLFWTest-01-UKS/ruleCollectionGroups/FWP-RCG-CMLFWTest-01-UKS-NetworkRules",
            "name": "FWP-RCG-CMLFWTest-01-UKS-NetworkRules",
            "nat_rule_collection": [],
            "network_rule_collection": [
              {
                "action": "Allow",
                "name": "Windows-Activation-Rules",
                "priority": 101,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "kms.core.windows.net"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "1688"
                    ],
                    "name": "Windows-Activation",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  }
                ]
              },
              {
                "action": "Allow",
                "name": "DNS-Rules",
                "priority": 102,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [
                      "168.63.129.16"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "53"
                    ],
                    "name": "Azure-DNS",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "8.8.8.8,8.8.4.4"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "53"
                    ],
                    "name": "GoogleDNS",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  },
                  {
                    "description": "",
                    "destination_addresses": [
                      "1.1.1.1,1.0.0.1"
                    ],
                    "destination_fqdns": [],
                    "destination_ip_groups": [],
                    "destination_ports": [
                      "53"
                    ],
                    "name": "Cloudflare-DNS",
                    "protocols": [
                      "TCP"
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": []
                  }
                ]
              }
            ],
            "priority": 100,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_firewall_policy.fwp-cmlfwtest-01-uks",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cmlaz01dc01_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-DirServices/providers/Microsoft.Network/networkInterfaces/CMLAZ01DC01-NIC",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.101.10.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/SN-DirServices"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "uksouth",
            "mac_address": "60-45-BD-F2-4A-3A",
            "name": "CMLAZ01DC01-NIC",
            "private_ip_address": "10.101.10.5",
            "private_ip_addresses": [
              "10.101.10.5"
            ],
            "resource_group_name": "RG-Platform-DirServices",
            "virtual_machine_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-DirServices/providers/Microsoft.Compute/virtualMachines/CMLAZ01DC01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg-platform-dirservices",
            "azurerm_virtual_network.vnet-platform-01",
            "data.azurerm_resource_group.rg-platform-dirservices",
            "data.azurerm_resource_group.rg-platform-networking",
            "data.azurerm_subnet.sn-dirservices"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_platform-dirservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Platform-DirServices",
            "location": "uksouth",
            "name": "NSG-Platform-DirServices",
            "resource_group_name": "RG-Platform-Networking",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.101.10.0/23",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Bastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.101.250.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.101.10.5",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "53",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-DNS",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "virtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-Any-All",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_prod-01-appservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Prod-01",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod-01-AppServices",
            "location": "uksouth",
            "name": "NSG-Prod-01-AppServices",
            "resource_group_name": "RG-Prod-01-Networking",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.102.100.0/23",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Bastion",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.101.250.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-Any-All",
                "priority": 4000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_platform_dirservices_allowbastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.101.10.0/23",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Platform-DirServices/securityRules/Allow-Bastion",
            "name": "Allow-Bastion",
            "network_security_group_name": "NSG-Platform-DirServices",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "RG-Platform-Networking",
            "source_address_prefix": "10.101.250.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_platform-dirservices",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_platform_dirservices_allowdns",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.101.10.5",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "53",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Platform-DirServices/securityRules/Allow-DNS",
            "name": "Allow-DNS",
            "network_security_group_name": "NSG-Platform-DirServices",
            "priority": 200,
            "protocol": "Tcp",
            "resource_group_name": "RG-Platform-Networking",
            "source_address_prefix": "virtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_platform-dirservices",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_platform_dirservices_denyall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Platform-DirServices/securityRules/Deny-Any-All",
            "name": "Deny-Any-All",
            "network_security_group_name": "NSG-Platform-DirServices",
            "priority": 4000,
            "protocol": "*",
            "resource_group_name": "RG-Platform-Networking",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_platform-dirservices",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_prod_01_appservices_allowbastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Prod-01",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.102.100.0/23",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod-01-AppServices/securityRules/Allow-Bastion",
            "name": "Allow-Bastion",
            "network_security_group_name": "NSG-Prod-01-AppServices",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "RG-Prod-01-Networking",
            "source_address_prefix": "10.101.250.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_prod-01-appservices",
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_prod_01_appservices_denyall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Prod-01",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod-01-AppServices/securityRules/Deny-Any-All",
            "name": "Deny-Any-All",
            "network_security_group_name": "NSG-Prod-01-AppServices",
            "priority": 4000,
            "protocol": "*",
            "resource_group_name": "RG-Prod-01-Networking",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_prod-01-appservices",
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-cml-bastion-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/publicIPAddresses/PIP-CML-Bastion-01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.167.37.27",
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "PIP-CML-Bastion-01",
            "resource_group_name": "RG-Platform-Networking",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SN-AppServices",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Prod-01",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.102.100.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Prod-01/subnets/SN-AppServices",
            "name": "SN-AppServices",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Prod-01-Networking",
            "virtual_network_name": "AZ01-Prod-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet-prod-01",
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SN-DirServices",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.101.10.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/SN-DirServices",
            "name": "SN-DirServices",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Platform-Networking",
            "virtual_network_name": "AZ01-Platform-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet-platform-01",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SN_AzureFirewallSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.101.251.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Platform-Networking",
            "virtual_network_name": "AZ01-Platform-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet-platform-01",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "SN_BastionSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.101.250.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "RG-Platform-Networking",
            "virtual_network_name": "AZ01-Platform-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet-platform-01",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc-nsg-appservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Prod-01",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Prod-01/subnets/SN-AppServices",
            "network_security_group_id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod-01-AppServices",
            "subnet_id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Prod-01/subnets/SN-AppServices"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_prod-01-appservices",
            "azurerm_subnet.SN-AppServices",
            "azurerm_virtual_network.vnet-prod-01",
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "assoc-nsg-dirservices",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/SN-DirServices",
            "network_security_group_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Platform-DirServices",
            "subnet_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/SN-DirServices"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg_platform-dirservices",
            "azurerm_subnet.SN-DirServices",
            "azurerm_virtual_network.vnet-platform-01",
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-platform-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.101.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b0d37e89-060c-4ae9-964a-3406b2aba757",
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01",
            "location": "uksouth",
            "name": "AZ01-Platform-01",
            "resource_group_name": "RG-Platform-Networking",
            "subnet": [
              {
                "address_prefixes": [
                  "10.101.10.0/23"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/SN-DirServices",
                "name": "SN-DirServices",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Platform-DirServices"
              },
              {
                "address_prefixes": [
                  "10.101.250.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.101.251.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg-platform-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-prod-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Prod-01",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.102.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "9face24a-0deb-4b57-a2fd-c13c20660d23",
            "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Prod-01",
            "location": "uksouth",
            "name": "AZ01-Prod-01",
            "resource_group_name": "RG-Prod-01-Networking",
            "subnet": [
              {
                "address_prefixes": [
                  "10.102.100.0/23"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Prod-01/subnets/SN-AppServices",
                "name": "SN-AppServices",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Prod-01-AppServices"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer-platform-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Platform",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01/virtualNetworkPeerings/Peer-AZ01-Platform-AZ01-Prod-01",
            "name": "Peer-AZ01-Platform-AZ01-Prod-01",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Prod-01",
            "resource_group_name": "RG-Platform-Networking",
            "use_remote_gateways": false,
            "virtual_network_name": "AZ01-Platform-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet-platform-01",
            "azurerm_virtual_network.vnet-prod-01",
            "data.azurerm_resource_group.rg-platform-networking",
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peer-prod-platform",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"].sub-Prod-01",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/43d74b2b-f6c0-4c6b-9e12-1095e6955562/resourceGroups/RG-Prod-01-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Prod-01/virtualNetworkPeerings/Peer-AZ01-Prod-01-AZ01-Platform",
            "name": "Peer-AZ01-Prod-01-AZ01-Platform",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/3635cc97-a2d6-4bc1-9ea6-00fcddc10aa6/resourceGroups/RG-Platform-Networking/providers/Microsoft.Network/virtualNetworks/AZ01-Platform-01",
            "resource_group_name": "RG-Prod-01-Networking",
            "use_remote_gateways": false,
            "virtual_network_name": "AZ01-Prod-01"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_virtual_network.vnet-platform-01",
            "azurerm_virtual_network.vnet-prod-01",
            "data.azurerm_resource_group.rg-platform-networking",
            "data.azurerm_resource_group.rg-prod-01-networking"
          ]
        }
      ]
    }
  ]
}